--- a/tamara/production/projekatSIMS/View/StartWindow.fxml
+++ b/tamara/production/projekatSIMS/View/StartWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -9,8 +10,23 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StartWindowController">
    <children>
-      <Label layoutX="51.0" layoutY="64.0" prefHeight="52.0" prefWidth="203.0" text="Zdravo svima, ovo je pocetni projekat" />
-      <Button layoutX="110.0" layoutY="104.0" mnemonicParsing="false" onAction="#logButtonPushed" text="Logovanje" />
-      <Button layoutX="105.0" layoutY="169.0" mnemonicParsing="false" onAction="#signUpButtonPushed" text="Registracija" />
+      <Label layoutX="159.0" layoutY="2.0" prefHeight="52.0" prefWidth="203.0" text="GLOBUS" />
+      <Button layoutX="416.0" layoutY="14.0" mnemonicParsing="false" onAction="#logButtonPushed" text="Logovanje" />
+      <Button layoutX="502.0" layoutY="14.0" mnemonicParsing="false" onAction="#signUpButtonPushed" text="Registracija" />
+      <ComboBox layoutX="7.0" layoutY="54.0" prefHeight="25.0" prefWidth="105.0" promptText="Kategorije" />
+      <ComboBox layoutX="127.0" layoutY="54.0" prefHeight="25.0" prefWidth="105.0" promptText="Sortiraj" />
+      <ComboBox layoutX="248.0" layoutY="54.0" prefHeight="25.0" prefWidth="105.0" promptText="Filteri" />
+      <TextField layoutX="373.0" layoutY="55.0" prefHeight="25.0" prefWidth="114.0" />
+      <Button layoutX="487.0" layoutY="55.0" mnemonicParsing="false" text="Pretrazi" />
+      <ScrollPane layoutX="10.0" layoutY="127.0" prefHeight="240.0" prefWidth="444.0">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="246.0" prefWidth="407.0" />
+        </content>
+      </ScrollPane>
+      <ImageView fitHeight="32.0" fitWidth="37.0" layoutX="554.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="file:/C:/Users/Admin/Desktop/cart.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
