--- a/projekatSIMS/src/View/SignUpWindow.fxml
+++ b/projekatSIMS/src/View/SignUpWindow.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SignUpWindowController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.SignUpWindowController">
    <children>
       <Button layoutX="23.0" layoutY="23.0" mnemonicParsing="false" onAction="#nazadButtonPushed" text="Nazad" />
       <Label layoutX="84.0" layoutY="73.0" prefHeight="21.0" prefWidth="35.0" text="Ime:" />
@@ -21,7 +24,9 @@
       <Label layoutX="70.0" layoutY="274.0" text="Lozinka:" />
       <TextField fx:id="kimeText" layoutX="133.0" layoutY="229.0" />
       <PasswordField fx:id="lozinkaText" layoutX="133.0" layoutY="269.0" />
-      <Button fx:id="registrovanjeButton" layoutX="379.0" layoutY="311.0" mnemonicParsing="false" onAction="#signUpButtonPushed" text="Registruj se" />
+      <Button fx:id="registrovanjeButton" layoutX="429.0" layoutY="337.0" mnemonicParsing="false" onAction="#signUpButtonPushed" text="Registruj se" />
       <Label fx:id="porukaLabela" layoutX="133.0" layoutY="28.0" prefHeight="21.0" prefWidth="266.0" text=" " />
+      <Label layoutX="75.0" layoutY="314.0" text="E-mail:" />
+      <TextField layoutX="133.0" layoutY="310.0" />
    </children>
 </AnchorPane>
