--- a/tamara/production/projekatSIMS/View/StartWindow.fxml
+++ b/tamara/production/projekatSIMS/View/StartWindow.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.paint.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
@@ -8,9 +9,12 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StartWindowController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: papayawhip;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.StartWindowController">
    <children>
-      <Label layoutX="159.0" layoutY="2.0" prefHeight="52.0" prefWidth="203.0" text="GLOBUS" />
+      <Label layoutX="45.0" layoutY="1.0" prefHeight="52.0" prefWidth="283.0" text="          G L O B U S" textFill="#1e0e14">
+         <font>
+            <Font name="Verdana Bold" size="18.0" />
+         </font></Label>
       <Button layoutX="416.0" layoutY="14.0" mnemonicParsing="false" onAction="#logButtonPushed" text="Logovanje" />
       <Button layoutX="502.0" layoutY="14.0" mnemonicParsing="false" onAction="#signUpButtonPushed" text="Registracija" />
       <ComboBox layoutX="7.0" layoutY="54.0" onAction="#comboCategoryChanged" prefHeight="25.0" prefWidth="105.0" promptText="Kategorije" />
@@ -25,7 +29,22 @@
       </ScrollPane>
       <ImageView fitHeight="32.0" fitWidth="37.0" layoutX="554.0" layoutY="51.0" onMouseClicked="#ShopCartClicked" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="file:/C:/Users/Admin/Desktop/cart.png" />
+            <Image url="/icons/cart.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="76.0" fitWidth="145.0" layoutX="457.0" layoutY="115.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="/icons/sandro.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="70.0" fitWidth="145.0" layoutX="457.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="/icons/tomFord.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="70.0" fitWidth="131.0" layoutX="464.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="/icons/rimova.jpg" />
          </image>
       </ImageView>
    </children>
