--- a/tamara/production/projekatSIMS/View/ChangeProfileWindow.fxml
+++ b/tamara/production/projekatSIMS/View/ChangeProfileWindow.fxml
@@ -9,11 +9,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="Controller.ChangeProfileController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ChangeProfileController">
     <children>
         <Button layoutX="23.0" layoutY="23.0" mnemonicParsing="false" onAction="#nazadButtonPushed" text="Nazad" />
         <Label layoutX="84.0" layoutY="73.0" prefHeight="21.0" prefWidth="35.0" text="Ime:" />
@@ -31,6 +27,6 @@
         <Button fx:id="izmenaButton" layoutX="429.0" layoutY="337.0" mnemonicParsing="false" onAction="#changeButtonPushed" text="Sacuvaj izmene" />
         <Label fx:id="porukaLabela" layoutX="133.0" layoutY="28.0" prefHeight="21.0" prefWidth="266.0" text=" " />
         <Label layoutX="75.0" layoutY="314.0" text="E-mail:" />
-        <TextField layoutX="133.0" layoutY="310.0" />
+        <TextField fx:id="email" layoutX="133.0" layoutY="310.0" />
     </children>
 </AnchorPane>
