--- a/projekatSIMS/src/View/ChangeProfileWindow.fxml
+++ b/projekatSIMS/src/View/ChangeProfileWindow.fxml
@@ -28,5 +28,8 @@
         <Label fx:id="porukaLabela" layoutX="133.0" layoutY="28.0" prefHeight="21.0" prefWidth="266.0" text=" " />
         <Label layoutX="75.0" layoutY="314.0" text="E-mail:" />
         <TextField fx:id="email" layoutX="133.0" layoutY="310.0" />
+      <Label layoutX="54.0" layoutY="354.0" text="Broj kartice" />
+      <TextField fx:id="karticaText" layoutX="133.0" layoutY="350.0" />
+      <Label fx:id="porukaLabela" layoutX="150.0" layoutY="27.0" text=" " />
     </children>
 </AnchorPane>
