--- a/projekatSIMS/src/View/StartWindow.fxml
+++ b/projekatSIMS/src/View/StartWindow.fxml
@@ -17,14 +17,31 @@
          </font></Label>
       <Button layoutX="416.0" layoutY="14.0" mnemonicParsing="false" onAction="#logButtonPushed" text="Logovanje" />
       <Button layoutX="502.0" layoutY="14.0" mnemonicParsing="false" onAction="#signUpButtonPushed" text="Registracija" />
-      <ComboBox layoutX="7.0" layoutY="54.0" onAction="#comboCategoryChanged" prefHeight="25.0" prefWidth="105.0" promptText="Kategorije" />
-      <ComboBox layoutX="127.0" layoutY="54.0" onAction="#comboSortChanged" prefHeight="25.0" prefWidth="105.0" promptText="Sortiraj" />
-      <ComboBox layoutX="248.0" layoutY="54.0" onAction="#comboFilterChanged" prefHeight="25.0" prefWidth="105.0" promptText="Filteri" />
+      <ComboBox fx:id="category" layoutX="7.0" layoutY="54.0" onAction="#comboCategoryChanged" prefHeight="25.0" prefWidth="105.0" promptText="Kategorije" />
+      <ComboBox fx:id="sort" layoutX="127.0" layoutY="54.0" onAction="#comboSortChanged" prefHeight="25.0" prefWidth="105.0" promptText="Sortiraj" />
+      <ComboBox fx:id="filter" layoutX="248.0" layoutY="54.0" onAction="#comboFilterChanged" prefHeight="25.0" prefWidth="105.0" promptText="Filteri" />
       <TextField layoutX="373.0" layoutY="55.0" prefHeight="25.0" prefWidth="114.0" />
       <Button layoutX="487.0" layoutY="55.0" mnemonicParsing="false" onAction="#searchButtonPushed" text="Pretrazi" />
-      <ScrollPane layoutX="10.0" layoutY="130.0" prefHeight="240.0" prefWidth="444.0">
+      <ScrollPane fx:id="scrollPane" layoutX="10.0" layoutY="115.0" prefHeight="240.0" prefWidth="444.0">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="246.0" prefWidth="407.0" />
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="246.0" prefWidth="407.0">
+               <children>
+                  <VBox fx:id="root" layoutX="7.0" layoutY="14.0" prefHeight="218.0" prefWidth="389.0">
+                     <children>
+                        <GridPane fx:id="roott" prefHeight="215.0" prefWidth="370.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
+                     </children>
+                  </VBox>
+               </children></AnchorPane>
         </content>
       </ScrollPane>
       <ImageView fitHeight="32.0" fitWidth="37.0" layoutX="554.0" layoutY="51.0" onMouseClicked="#ShopCartClicked" pickOnBounds="true" preserveRatio="true">
