scena za proizvod, odabir parametara, dodavanje u korpu

--- a/tamara/production/projekatSIMS/View/StartWindow.fxml
+++ b/tamara/production/projekatSIMS/View/StartWindow.fxml
@@ -47,6 +47,6 @@
       </ImageView>
       <ComboBox fx:id="female" layoutX="121.0" layoutY="109.0" onAction="#comboChanged" prefHeight="31.0" prefWidth="89.0" promptText="Zene" />
       <ComboBox fx:id="price" layoutX="404.0" layoutY="109.0" onAction="#comboChanged" prefHeight="31.0" prefWidth="114.0" promptText="raspon cene" />
-      <Button layoutX="559.0" layoutY="56.0" mnemonicParsing="false" onAction="#ShopCartClicked" prefHeight="31.0" prefWidth="57.0" text="andja" />
+      <Button fx:id="korpaa" layoutX="559.0" layoutY="56.0" mnemonicParsing="false" onAction="#ShopCartClicked" prefHeight="31.0" prefWidth="57.0" text="andja" />
    </children>
 </AnchorPane>
