--- a/tamara/production/projekatSIMS/View/StartWindow.fxml
+++ b/tamara/production/projekatSIMS/View/StartWindow.fxml
@@ -17,9 +17,9 @@
          </font></Label>
       <Button layoutX="416.0" layoutY="14.0" mnemonicParsing="false" onAction="#logButtonPushed" text="Logovanje" />
       <Button layoutX="502.0" layoutY="14.0" mnemonicParsing="false" onAction="#signUpButtonPushed" text="Registracija" />
-      <ComboBox fx:id="male" layoutX="7.0" layoutY="109.0" onAction="#comboChanged" prefHeight="31.0" prefWidth="114.0" promptText="Muskarci" />
-      <ComboBox fx:id="sort" layoutX="210.0" layoutY="109.0" onAction="#comboChanged" prefHeight="31.0" prefWidth="107.0" promptText="Sortiraj" />
-      <ComboBox fx:id="color" layoutX="317.0" layoutY="109.0" onAction="#comboChanged" prefHeight="31.0" prefWidth="89.0" promptText="boja" />
+      <ComboBox fx:id="male" layoutX="7.0" layoutY="112.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="96.0" promptText="Muskarci" />
+      <ComboBox fx:id="sort" layoutX="193.0" layoutY="112.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="84.0" promptText="Sortiraj" />
+      <ComboBox fx:id="color" layoutX="283.0" layoutY="112.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="77.0" promptText="boja" />
       <TextField fx:id="search" layoutX="375.0" layoutY="56.0" prefHeight="25.0" prefWidth="114.0" />
       <Button fx:id="searchButton" layoutX="489.0" layoutY="56.0" mnemonicParsing="false" onAction="#searchButtonPushed" text="Pretrazi" />
       <ScrollPane fx:id="scrollPane" layoutX="30.0" layoutY="152.0" prefHeight="235.0" prefWidth="431.0">
@@ -45,8 +45,9 @@
             <Image url="/icons/rimova.jpg" />
          </image>
       </ImageView>
-      <ComboBox fx:id="female" layoutX="121.0" layoutY="109.0" onAction="#comboChanged" prefHeight="31.0" prefWidth="89.0" promptText="Zene" />
-      <ComboBox fx:id="price" layoutX="404.0" layoutY="109.0" onAction="#comboChanged" prefHeight="31.0" prefWidth="114.0" promptText="raspon cene" />
+      <ComboBox fx:id="female" layoutX="110.0" layoutY="112.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="77.0" promptText="Zene" />
+      <ComboBox fx:id="price" layoutX="366.0" layoutY="112.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="114.0" promptText="raspon cene" />
       <Button fx:id="korpaa" layoutX="559.0" layoutY="56.0" mnemonicParsing="false" onAction="#ShopCartClicked" prefHeight="31.0" prefWidth="57.0" text="andja" />
+      <Button fx:id="searchF" layoutX="487.0" layoutY="112.0" mnemonicParsing="false" onAction="#nadjiClicked" text="Nadji" />
    </children>
 </AnchorPane>
