--- a/tamara/production/projekatSIMS/View/StartWindowLoggedUser.fxml
+++ b/tamara/production/projekatSIMS/View/StartWindowLoggedUser.fxml
@@ -15,7 +15,7 @@
             <font>
                 <Font name="Verdana Bold" size="18.0" />
             </font></Label>
-        <Button layoutX="416.0" layoutY="14.0" mnemonicParsing="false" onAction="#ChangeProfileButtonPushed" text="Izmena Profila" />
+        <Button layoutX="416.0" layoutY="14.0" mnemonicParsing="false" onAction="#ChangeProfileButtonPushed" text="Prikaz Profila" />
         <Button layoutX="516.0" layoutY="14.0" mnemonicParsing="false" onAction="#logOutButtonPushed" text="Odjavi se" />
         <ComboBox fx:id="male" layoutX="6.0" layoutY="84.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="90.0" promptText="Muskarci" />
         <ComboBox fx:id="sort" layoutX="180.0" layoutY="84.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="84.0" promptText="Sortiraj" />
@@ -52,5 +52,6 @@
         </ImageView>
         <ComboBox fx:id="female" layoutX="103.0" layoutY="84.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="71.0" promptText="Zene" />
         <ComboBox fx:id="price" layoutX="353.0" layoutY="84.0" onAction="#comboChanged" prefHeight="25.0" prefWidth="107.0" promptText="raspon cene" />
+      <Button fx:id="searchF" layoutX="472.0" layoutY="84.0" mnemonicParsing="false" onAction="#nadjiClicked" text="Nadji" />
     </children>
 </AnchorPane>
