--- a/tamara/production/projekatSIMS/View/ChangeProfileWindow.fxml
+++ b/tamara/production/projekatSIMS/View/ChangeProfileWindow.fxml
@@ -24,12 +24,13 @@
         <Label layoutX="70.0" layoutY="274.0" text="Lozinka:" />
         <TextField fx:id="kimeText" layoutX="133.0" layoutY="229.0" />
         <PasswordField fx:id="lozinkaText" layoutX="133.0" layoutY="269.0" />
-        <Button fx:id="izmenaButton" layoutX="429.0" layoutY="337.0" mnemonicParsing="false" onAction="#changeButtonPushed" text="Sacuvaj izmene" />
+        <Button fx:id="izmenaButton" layoutX="426.0" layoutY="338.0" mnemonicParsing="false" onAction="#changeButtonPushed" prefHeight="25.0" prefWidth="104.0" text="Sacuvaj izmene" />
         <Label fx:id="porukaLabela" layoutX="133.0" layoutY="28.0" prefHeight="21.0" prefWidth="266.0" text=" " />
         <Label layoutX="75.0" layoutY="314.0" text="E-mail:" />
         <TextField fx:id="email" layoutX="133.0" layoutY="310.0" />
       <Label layoutX="54.0" layoutY="354.0" text="Broj kartice" />
       <TextField fx:id="karticaText" layoutX="133.0" layoutY="350.0" />
       <Label fx:id="porukaLabela" layoutX="150.0" layoutY="27.0" text=" " />
+      <Button layoutX="426.0" layoutY="298.0" mnemonicParsing="false" onAction="#istorijaKupovinePushed" text="Istorija kupovine" />
     </children>
 </AnchorPane>
