--- a/projekatSIMS/src/View/Cart.fxml
+++ b/projekatSIMS/src/View/Cart.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.media.*?>
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -10,15 +11,15 @@
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.CartController">
    <children>
       <Label fx:id="tekst" layoutX="25.0" layoutY="94.0" prefHeight="32.0" prefWidth="207.0" />
-      <Label fx:id="cena" disable="true" layoutX="300.0" layoutY="126.0" text="Cena" />
-      <Button layoutX="482.0" layoutY="339.0" mnemonicParsing="false" text="Naruči" />
+      <Label fx:id="cena" layoutX="294.0" layoutY="100.0" text="Cena" />
+      <Button layoutX="515.0" layoutY="346.0" mnemonicParsing="false" onAction="#orderButtonPushed" text="Naruči" />
       <ImageView fx:id="slika" fitHeight="68.0" fitWidth="119.0" layoutX="25.0" layoutY="153.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="kolicina" disable="true" layoutX="462.0" layoutY="126.0" text="Količina" />
-      <Button layoutX="32.0" layoutY="34.0" mnemonicParsing="false" text="Nazad" />
-      <ScrollPane layoutX="6.0" layoutY="160.0" prefHeight="162.0" prefWidth="593.0">
-         <content>
-          <AnchorPane fx:id="skrolBar" minHeight="0.0" minWidth="0.0" prefHeight="168.0" prefWidth="577.0" />
-         </content>
-      </ScrollPane>
+      <Label fx:id="kolicina" layoutX="462.0" layoutY="100.0" text="Količina" />
+      <Button layoutX="32.0" layoutY="34.0" mnemonicParsing="false" onAction="#backButtonPushed" text="Nazad" />
+      <ScrollPane fx:id="scrollPane" layoutX="-1.0" layoutY="129.0" prefHeight="182.0" prefWidth="600.0" />
+      <Label fx:id="ukupno" layoutX="384.0" layoutY="314.0" prefHeight="31.0" prefWidth="195.0" />
+      <VBox fx:id="root1" layoutX="266.0" layoutY="128.0" prefHeight="182.0" prefWidth="119.0" />
+      <VBox fx:id="root2" layoutX="445.0" layoutY="129.0" prefHeight="182.0" prefWidth="130.0" />
+      <VBox fx:id="root" layoutX="14.0" layoutY="130.0" prefHeight="182.0" prefWidth="207.0" />
    </children>
 </AnchorPane>
