--- a/projekatSIMS/src/View/Cart.fxml
+++ b/projekatSIMS/src/View/Cart.fxml
@@ -21,5 +21,8 @@
       <VBox fx:id="root1" layoutX="266.0" layoutY="128.0" prefHeight="182.0" prefWidth="119.0" />
       <VBox fx:id="root2" layoutX="445.0" layoutY="129.0" prefHeight="182.0" prefWidth="130.0" />
       <VBox fx:id="root" layoutX="14.0" layoutY="130.0" prefHeight="182.0" prefWidth="207.0" />
+      <Button layoutX="469.0" layoutY="47.0" mnemonicParsing="false" onAction="#izbaciButtonPushed" text="Izbaci iz korpe" />
+      <Label layoutX="171.0" layoutY="350.0" text="Ukupno za placanje:" />
+      <Label fx:id="ukupnoLabela" layoutX="294.0" layoutY="350.0" prefHeight="17.0" prefWidth="64.0" text="0.00" />
    </children>
 </AnchorPane>
